<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:hint="@string/str_name"
            android:importantForAutofill="no"
            android:inputType="text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/age_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text ="@string/str_age_tools"
                />

            <SeekBar
                android:id="@+id/age_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="60"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            android:weightSum="6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_weight"
                android:layout_weight="1"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:hint="@string/str_hint_weight"
                android:importantForAutofill="no"
                android:inputType="number"
                android:layout_weight="4"
                />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_male"
                android:layout_margin="8dp"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_female"
                android:layout_margin="8dp"
                />

        </RadioGroup>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_terms_and_conditions"
            android:layout_margin="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_terms_text"
            android:layout_margin="8dp"
            />

    </LinearLayout>

</ScrollView>
